The JSTD version that ships with the project uses the new gateway directive. Updated the config so e2e tests are no longer failing from the command line.

--- a/config/jsTestDriver-scenario.conf
+++ b/config/jsTestDriver-scenario.conf
@@ -6,5 +6,5 @@ load:
   - test/lib/angular/jstd-scenario-adapter.js
   - test/e2e/scenarios.js
 
-proxy:
- - {matcher: "*", server: "http://localhost:8000"}
+gateway:
+- {matcher: "app", server: "http://localhost:8000"}
