added the version on package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "angularjs-seed",
   "description": "A starter project for AngularJS",
   "repository": "https://github.com/angular/angular-seed",
+  "version":"0.0.1",
   "devDependencies": {
     "phantomjs": "~1.9",
     "karma": "~0.10.4",
