chore(package.json): ensure npm install and publish work correctly
We don't want to publish this project to npm so it is set to "private"
It is nice to be able to run `npm install` on the project, which requires
that there is a version number.

Closes #117
Closes #119
Closes #97

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "version": "0.0.0",
+  "private": true,
   "name": "angularjs-seed",
   "description": "A starter project for AngularJS",
   "repository": "https://github.com/angular/angular-seed",
