--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
     "angular": "1.2.x",
     "angular-mocks": "~1.2.15",
     "bootstrap": "~3.1.1",
-    "angular-resource": "~1.2.15"
+    "angular-resource": "~1.2.15",
+    "jquery": "1.10.2",
+    "angular-animate": "~1.2.15"
   }
 }
