--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   "private": true,
   "dependencies": {
     "angular": "1.2.x",
-    "angular-mocks": "~1.2.15",
+    "angular-mocks": "~1.2.x",
     "bootstrap": "~3.1.1"
   }
 }
