--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
     "jquery": "1.10.2",
     "bootstrap": "~3.1.1",
     "angular-route": "~1.2.x",
-    "angular-resource": "~1.2.x"
+    "angular-resource": "~1.2.x",
+    "jquery": "1.10.2",
+    "angular-animate": "~1.2.x"
   }
 }
