chore(bower): ensure specific version of jquery is loaded
Later in the tutorial we need jquery@1.10.2, but bootstrap has a dependency
on jquery>=1.9.  So if we don't explicitly set the version we will end up
with the latest jquery, which has a different folder layout that 1.10.2.

--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular": "1.2.x",
     "angular-mocks": "~1.2.x",
+    "jquery": "1.10.2",
     "bootstrap": "~3.1.1"
   }
 }
