--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "repository": "https://github.com/angular/angular-phonecat",
   "license": "MIT",
   "devDependencies": {
-    "karma": "~0.10",
-    "protractor": "^0.24.2",
+    "karma": "^0.12.16",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-jasmine": "^0.1.5",
+    "protractor": "~1.0.0",
     "http-server": "^0.6.1",
     "bower": "^1.3.1",
     "shelljs": "^0.2.6"
@@ -19,8 +21,8 @@
     "start": "http-server -p 8000",
 
     "pretest": "npm install",
-    "test": "karma start test/karma.conf.js",
-    "test-single-run": "karma start test/karma.conf.js  --single-run",
+    "test": "node node_modules/karma/bin/karma start test/karma.conf.js",
+    "test-single-run": "node node_modules/karma/bin/karma start test/karma.conf.js  --single-run",
 
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
