--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "karma-jasmine": "^0.1.5",
     "protractor": "~1.0.0",
     "http-server": "^0.6.1",
+    "tmp": "0.0.23",
     "bower": "^1.3.1",
     "shelljs": "^0.2.6"
   },
