--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "postinstall": "bower install",
 
     "prestart": "npm install",
-    "start": "http-server -p 8000",
+    "start": "http-server --domain 0.0.0.0 --port 8000",
 
     "pretest": "npm install",
     "test": "node node_modules/karma/bin/karma start test/karma.conf.js",
