--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "1.2.x",
-    "angular-mocks": "~1.2.x",
+    "angular": "1.3.x",
+    "angular-mocks": "1.3.x",
     "jquery": "1.10.2",
     "bootstrap": "~3.1.1"
   }
