--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-mocks": "1.3.x",
     "jquery": "1.10.2",
     "bootstrap": "~3.1.1",
-    "angular-route": "1.3.x"
+    "angular-route": "1.3.x",
+    "angular-resource": "1.3.x"
   }
 }
