--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "jquery": "1.10.2",
     "bootstrap": "~3.1.1",
     "angular-route": "1.3.x",
-    "angular-resource": "1.3.x"
+    "angular-resource": "1.3.x",
+    "angular-animate": "1.3.x"
   }
 }
