--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "~0.1.0",
     "protractor": "^2.1.0",
     "http-server": "^0.6.1",
