--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "angular": "1.3.x",
     "angular-mocks": "1.3.x",
-    "jquery": "1.10.2",
+    "jquery": "~2.1.1",
     "bootstrap": "~3.1.1"
   }
 }
