--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "http-server": "^0.6.1",
     "tmp": "0.0.23",
     "bower": "^1.3.1",
-    "shelljs": "^0.2.6"
+    "shelljs": "^0.2.6",
+    "jasmine-reporters": "^2.0.0"
   },
   "scripts": {
     "postinstall": "bower install",
