--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular": "1.5.x",
     "angular-mocks": "1.5.x",
     "jquery": "~2.1.1",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "angular-route": "1.5.x"
   }
 }
