--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-mocks": "1.5.x",
     "jquery": "~2.1.1",
     "bootstrap": "~3.1.1",
-    "angular-route": "1.5.x"
+    "angular-route": "1.5.x",
+    "angular-resource": "1.5.x"
   }
 }
