--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ before_script:
   - sleep 3
 
 script:
-  - node_modules/.bin/karma start karma.conf.js --single-run
-  - node_modules/.bin/protractor protractor.conf.js
+  - node_modules/.bin/karma start test/karma.conf.js --single-run
+  - node_modules/.bin/protractor test/protractor.conf.js
