--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env: BROWSERS=firefox E2E_BROWSERS=Firefox
 
 before_script:
   - docker build -t tutum.co/tktk8924/angular-phonecat:$TRAVIS_BRANCH -f Dockerfile.pro .
-  - docker run -d -p 127.0.0.1:80:80 --name angular-phonecat tktk8924/angular-phonecat
+  - docker run -d -p 127.0.0.1:80:80 tutum.co/tktk8924/angular-phonecat:$TRAVIS_BRANCH
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm install
