--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
   - node_modules/.bin/protractor test/protractor-conf.js
 
 after_success:
-  - docker login tutum.co -u $TUTUM_USERNAME -p $TUTUM_PASSWORD
+  - docker login -u $TUTUM_USERNAME -p $TUTUM_PASSWORD tutum.co
   - docker push tutum.co/tktk8924/angular-phonecat:$TRAVIS_BRANCH
