--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ before_script:
 script:
   - node_modules/.bin/karma start test/karma.conf.js --single-run
   - node_modules/.bin/protractor test/protractor-conf.js
-
-after_success:
   - docker login -u $TUTUM_USERNAME -p $TUTUM_PASSWORD -e $TUTUM_EMAIL tutum.co
   - docker push tutum.co/tktk8924/angular-phonecat:$TRAVIS_BRANCH
+
+after_success:
+  - echo $TRAVIS_TEST_RESULT
