--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,12 @@ services:
 env: BROWSERS=firefox E2E_BROWSERS=Firefox
 
 before_script:
-  - docker build -t tutum.co/tktk8924/angular-phonecat:$TRAVIS_BRANCH -f Dockerfile.pro .
-  - docker run -d -p 127.0.0.1:80:80 tutum.co/tktk8924/angular-phonecat:$TRAVIS_BRANCH
+  - docker build -t tutum.co/tktk8924/angular-phonecat:$TRAVIS_BRANCH -f Dockerfile
+  - docker run -d -p 127.0.0.1:8000:8000 tutum.co/tktk8924/angular-phonecat:$TRAVIS_BRANCH
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm install
   - npm run update-webdriver
-  - npm start > /dev/null &
-  - sleep 3
 
 script:
   - node_modules/.bin/karma start test/karma.conf.js --single-run
