--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "bootstrap": "~3.1.1",
     "angular-route": "1.4.x",
     "angular-resource": "1.4.x",
+    "angular-aria": "1.4.x",
     "angular-animate": "1.4.x"
   }
 }
