--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
+sudo: required
+dist: trusty
+
 language: node_js
 node_js:
   - '4.4'
 
-env: BROWSERS=firefox E2E_BROWSERS=Firefox
-
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm run update-webdriver
+  - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+  - sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
+  - sudo apt-get update -q
+  - sudo apt-get install -q google-chrome-stable
 
 script:
   - scripts/private/test-all.sh
