--- a/package.json
+++ b/package.json
@@ -1,36 +1,66 @@
 {
-  "name": "angular-phonecat",
-  "private": true,
-  "version": "0.0.0",
-  "description": "A tutorial application for AngularJS",
-  "repository": "https://github.com/angular/angular-phonecat",
-  "license": "MIT",
-  "devDependencies": {
-    "bower": "^1.7.7",
-    "http-server": "^0.9.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.8",
-    "protractor": "^4.0.9"
-  },
-  "scripts": {
-    "postinstall": "bower install",
-
-    "prestart": "npm install",
-    "start": "http-server ./app -a localhost -p 8000 -c-1",
-
-    "pretest": "npm install",
-    "test": "karma start karma.conf.js",
-    "test-single-run": "karma start karma.conf.js --single-run",
-
-    "preupdate-webdriver": "npm install",
-    "update-webdriver": "webdriver-manager update",
-
-    "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor e2e-tests/protractor.conf.js",
-
-    "update-index-async": "node -e \"var fs=require('fs'),indexFile='app/index-async.html',loaderFile='app/bower_components/angular-loader/angular-loader.min.js',loaderText=fs.readFileSync(loaderFile,'utf-8').split(/sourceMappingURL=angular-loader.min.js.map/).join('sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map'),indexText=fs.readFileSync(indexFile,'utf-8').split(/\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/).join('//@@NG_LOADER_START@@\\n'+loaderText+'    //@@NG_LOADER_END@@');fs.writeFileSync(indexFile,indexText);\""
-  }
+    "name": "angular-phonecat",
+    "private": true,
+    "version": "0.0.0",
+    "description": "A tutorial application for AngularJS",
+    "repository": "https://github.com/angular/angular-phonecat",
+    "license": "MIT",
+    "dependencies": {
+        "@angular/common": "~4.0.0",
+        "@angular/compiler": "~4.0.0",
+        "@angular/core": "~4.0.0",
+        "@angular/forms": "~4.0.0",
+        "@angular/http": "~4.0.0",
+        "@angular/platform-browser": "~4.0.0",
+        "@angular/platform-browser-dynamic": "~4.0.0",
+        "@angular/router": "~4.0.0",
+        "@angular/upgrade": "^4.3.2",
+        "angular-in-memory-web-api": "~0.3.0",
+        "core-js": "^2.4.1",
+        "rxjs": "5.0.1",
+        "systemjs": "0.19.40",
+        "zone.js": "^0.8.4"
+    },
+    "devDependencies": {
+        "@types/angular": "^1.6.27",
+        "@types/angular-animate": "^1.5.8",
+        "@types/angular-cookies": "^1.4.4",
+        "@types/angular-mocks": "^1.5.10",
+        "@types/angular-resource": "^1.5.12",
+        "@types/angular-route": "^1.3.4",
+        "@types/angular-sanitize": "^1.3.5",
+        "@types/jasmine": "^2.5.53",
+        "bower": "^1.7.7",
+        "http-server": "^0.9.0",
+        "jasmine-core": "^2.4.1",
+        "karma": "^0.13.22",
+        "karma-chrome-launcher": "^0.2.3",
+        "karma-firefox-launcher": "^0.1.7",
+        "karma-jasmine": "^0.3.8",
+        "protractor": "^4.0.9",
+        "typescript": "^2.4.2",
+        "concurrently": "^3.2.0",
+        "lite-server": "^2.2.2",
+        "canonical-path": "0.0.2",
+        "tslint": "^3.15.1",
+        "lodash": "^4.16.4",
+        "karma-cli": "^1.0.1",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "rimraf": "^2.5.4"
+    },
+    "scripts": {
+        "tsc": "tsc",
+        "tsc:w": "tsc -w",
+        "postinstall": "bower install",
+        "prestart": "npm install",
+        "start": "http-server ./ -a localhost -p 8000 -c-1",
+        "pretest": "npm install",
+        "test": "karma start karma.conf.js",
+        "test-single-run": "karma start karma.conf.js --single-run",
+        "preupdate-webdriver": "npm install",
+        "update-webdriver": "webdriver-manager update",
+        "preprotractor": "npm run update-webdriver",
+        "protractor": "protractor e2e-tests/protractor.conf.js",
+        "update-index-async": "node -e \"var fs=require('fs'),indexFile='app/index-async.html',loaderFile='app/bower_components/angular-loader/angular-loader.min.js',loaderText=fs.readFileSync(loaderFile,'utf-8').split(/sourceMappingURL=angular-loader.min.js.map/).join('sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map'),indexText=fs.readFileSync(indexFile,'utf-8').split(/\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/).join('//@@NG_LOADER_START@@\\n'+loaderText+'    //@@NG_LOADER_END@@');fs.writeFileSync(indexFile,indexText);\""
+    }
 }
