--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
         "@angular/platform-browser-dynamic": "~4.0.0",
         "@angular/router": "~4.0.0",
         "@angular/upgrade": "^4.3.2",
+        "angular": "^1.6.5",
         "angular-in-memory-web-api": "~0.3.0",
         "core-js": "^2.4.1",
+        "jquery": "^3.2.1",
         "rxjs": "5.0.1",
         "systemjs": "0.19.40",
         "zone.js": "^0.8.4"
@@ -30,30 +32,41 @@
         "@types/angular-route": "^1.3.4",
         "@types/angular-sanitize": "^1.3.5",
         "@types/jasmine": "^2.5.53",
+        "@types/jquery": "^3.2.10",
+        "angular2-template-loader": "^0.6.2",
+        "awesome-typescript-loader": "^3.2.1",
+        "babel-core": "^6.25.0",
+        "babel-loader": "^7.1.1",
         "bower": "^1.7.7",
+        "canonical-path": "0.0.2",
+        "concurrently": "^3.2.0",
+        "html-loader": "^0.4.5",
+        "html-webpack-plugin": "^2.29.0",
         "http-server": "^0.9.0",
         "jasmine-core": "^2.4.1",
         "karma": "^0.13.22",
         "karma-chrome-launcher": "^0.2.3",
+        "karma-cli": "^1.0.1",
         "karma-firefox-launcher": "^0.1.7",
         "karma-jasmine": "^0.3.8",
-        "protractor": "^4.0.9",
-        "typescript": "^2.4.2",
-        "concurrently": "^3.2.0",
-        "lite-server": "^2.2.2",
-        "canonical-path": "0.0.2",
-        "tslint": "^3.15.1",
-        "lodash": "^4.16.4",
-        "karma-cli": "^1.0.1",
         "karma-jasmine-html-reporter": "^0.2.2",
-        "rimraf": "^2.5.4"
+        "lite-server": "^2.2.2",
+        "lodash": "^4.16.4",
+        "protractor": "^4.0.9",
+        "raw-loader": "^0.5.1",
+        "rimraf": "^2.5.4",
+        "tslint": "^3.15.1",
+        "typescript": "^2.4.2",
+        "webpack": "^3.3.0",
+        "webpack-dev-server": "^2.6.1"
     },
     "scripts": {
+        "start-wpk": "webpack-dev-server --progress --colors --watch",
+        "start": "http-server ./ -a localhost -p 8000 -c-1",
         "tsc": "tsc",
         "tsc:w": "tsc -w",
         "postinstall": "bower install",
         "prestart": "npm install",
-        "start": "http-server ./ -a localhost -p 8000 -c-1",
         "pretest": "npm install",
         "test": "karma start karma.conf.js",
         "test-single-run": "karma start karma.conf.js --single-run",
