--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,5 +1,15 @@
 {
   "compilerOptions": {
+    "types": [
+      // add node as an option
+      "node",
+      "jasmine"
+    ],
+    // typeRoots option has been previously configured
+    "typeRoots": [
+      // add path to @types
+      "../node_modules/@types"
+    ],
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -7,7 +17,14 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
-    "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true
+    "noImplicitAny": false,
+    "suppressImplicitAnyIndexErrors": true,
+    //temp fix until RxJs 6 comes out
+    "noStrictGenericChecks": true,
+    "exclude": [
+      "node_modules",
+      "dist",
+      "**/*.spec.ts"
+    ]
   }
 }
