--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@types/angular-sanitize": "^1.3.5",
         "@types/jasmine": "^2.5.53",
         "@types/jquery": "^3.2.10",
+        "@types/node": "^8.0.17",
         "angular2-template-loader": "^0.6.2",
         "awesome-typescript-loader": "^3.2.1",
         "babel-core": "^6.25.0",
@@ -52,6 +53,7 @@
         "karma-jasmine-html-reporter": "^0.2.2",
         "lite-server": "^2.2.2",
         "lodash": "^4.16.4",
+        "ng-cache-loader": "0.0.25",
         "protractor": "^4.0.9",
         "raw-loader": "^0.5.1",
         "rimraf": "^2.5.4",
