webpack working with some angualr ngrepeat etc errors

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
         "@angular/router": "~4.0.0",
         "@angular/upgrade": "^4.3.2",
         "angular": "^1.6.5",
+        "angular-animate": "^1.6.5",
         "angular-in-memory-web-api": "~0.3.0",
+        "angular-resource": "^1.6.5",
+        "angular-route": "^1.6.5",
         "core-js": "^2.4.1",
         "jquery": "^3.2.1",
         "rxjs": "5.0.1",
@@ -64,7 +67,8 @@
     },
     "scripts": {
         "start-wpk": "webpack-dev-server --progress --colors --watch",
-        "start": "http-server ./ -a localhost -p 8000 -c-1",
+        "start-old": "http-server ./ -a localhost -p 8000 -c-1",
+        "start": "webpack-dev-server --progress --colors --watch",
         "tsc": "tsc",
         "tsc:w": "tsc -w",
         "postinstall": "bower install",
