app working with webpack

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "angular-in-memory-web-api": "~0.3.0",
         "angular-resource": "^1.6.5",
         "angular-route": "^1.6.5",
+        "bootstrap": "^3.3.7",
         "core-js": "^2.4.1",
         "jquery": "^3.2.1",
         "rxjs": "5.0.1",
@@ -44,10 +45,14 @@
         "bower": "^1.7.7",
         "canonical-path": "0.0.2",
         "concurrently": "^3.2.0",
+        "copy-webpack-plugin": "^4.0.1",
+        "css-loader": "^0.28.4",
+        "file-loader": "^0.11.2",
         "html-loader": "^0.4.5",
         "html-webpack-plugin": "^2.29.0",
         "http-server": "^0.9.0",
         "jasmine-core": "^2.4.1",
+        "json-loader": "^0.5.7",
         "karma": "^0.13.22",
         "karma-chrome-launcher": "^0.2.3",
         "karma-cli": "^1.0.1",
@@ -60,8 +65,10 @@
         "protractor": "^4.0.9",
         "raw-loader": "^0.5.1",
         "rimraf": "^2.5.4",
+        "style-loader": "^0.18.2",
         "tslint": "^3.15.1",
         "typescript": "^2.4.2",
+        "url-loader": "^0.5.9",
         "webpack": "^3.3.0",
         "webpack-dev-server": "^2.6.1"
     },
