--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
         "start": "webpack-dev-server --progress --colors --watch",
         "tsc": "tsc",
         "tsc:w": "tsc -w",
-        "postinstall": "bower install",
         "prestart": "npm install",
         "pretest": "npm install",
         "test": "karma start karma.conf.js",
@@ -86,7 +85,6 @@
         "preupdate-webdriver": "npm install",
         "update-webdriver": "webdriver-manager update",
         "preprotractor": "npm run update-webdriver",
-        "protractor": "protractor e2e-tests/protractor.conf.js",
-        "update-index-async": "node -e \"var fs=require('fs'),indexFile='app/index-async.html',loaderFile='app/bower_components/angular-loader/angular-loader.min.js',loaderText=fs.readFileSync(loaderFile,'utf-8').split(/sourceMappingURL=angular-loader.min.js.map/).join('sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map'),indexText=fs.readFileSync(indexFile,'utf-8').split(/\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/).join('//@@NG_LOADER_START@@\\n'+loaderText+'    //@@NG_LOADER_END@@');fs.writeFileSync(indexFile,indexText);\""
+        "protractor": "protractor e2e-tests/protractor.conf.js"
     }
 }
