--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "devDependencies": {
         "@types/angular": "^1.6.29",
         "@types/angular-animate": "^1.5.8",
+        "@types/angular-mocks": "^1.5.10",
+        "@types/angular-resource": "^1.5.12",
+        "@types/angular-route": "^1.3.4",
         "bower": "^1.7.7",
         "gulp": "^3.9.1",
         "gulp-typescript": "^3.2.1",
