--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
         "@types/angular-mocks": "^1.5.10",
         "@types/angular-resource": "^1.5.12",
         "@types/angular-route": "^1.3.4",
+        "@types/jasmine": "^2.5.53",
         "bower": "^1.7.7",
         "gulp": "^3.9.1",
         "gulp-typescript": "^3.2.1",
         "http-server": "^0.9.0",
-        "jasmine-core": "^2.4.1",
+        "jasmine": "^2.7.0",
         "karma": "^0.13.22",
         "karma-chrome-launcher": "^0.2.3",
         "karma-firefox-launcher": "^0.1.7",
