--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,6 @@
   "private": true,
   "dependencies": {
     "angular": "1.6.x",
-    "angular-animate": "1.5.x",
     "angular-mocks": "1.5.x",
     "angular-resource": "1.5.x",
     "angular-route": "1.5.x",
@@ -15,10 +14,8 @@
     "jquery": "2.2.x",
     "firebase": "^3.6.x",
     "angular-tel-input": "^1.0.0",
-    "popper.js": "^1.14.3",
     "angularfire": "^2.3.0",
     "jquery-bracket": "^0.11.1",
-    "angular-smart-table": "^2.1.11",
-    "smart-table-sticky-header": "st-sticky-header#^1.0.1"
+    "angular-smart-table": "^2.1.11"
   }
 }
