--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: required
 dist: trusty
 
 language: node_js
@@ -6,13 +5,13 @@ node_js:
   - 6  # Because `protractor@5.4.1` requires 6.9+.
   - 10
 
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-  - sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
-  - sudo apt-get update -q
-  - sudo apt-get install -q google-chrome-stable
+addons:
+  chrome: stable
+  firefox: latest
+
+cache:
+  directories:
+    - "$HOME/.npm"
 
 script:
   - scripts/private/test-all.sh
