chore(package): ensure `pretest` script is run on `test-single-run`

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
-    "test-single-run": "karma start karma.conf.js --single-run",
+    "test-single-run": "npm test -- --single-run",
 
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
