Migrated templates from HTML to Pug (aka Jade)

--- a/package.json
+++ b/package.json
@@ -6,30 +6,32 @@
   "repository": "https://github.com/angular/angular-phonecat",
   "license": "MIT",
   "dependencies": {
-    "angular": "1.7.x",
-    "angular-animate": "1.7.x",
-    "angular-resource": "1.7.x",
-    "angular-route": "1.7.x",
+    "angular": "^1.7.8",
+    "angular-animate": "^1.7.8",
+    "angular-resource": "^1.7.8",
+    "angular-route": "^1.7.8",
     "bootstrap": "3.3.x",
     "jquery": "3.3.x"
   },
   "devDependencies": {
-    "angular-mocks": "1.7.x",
+    "angular-mocks": "^1.7.8",
     "cpx": "^1.5.0",
     "http-server": "^0.11.1",
-    "jasmine-core": "^3.3.0",
-    "karma": "^3.1.1",
+    "jasmine-core": "^3.5.0",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.1.0",
+    "karma-firefox-launcher": "^1.2.0",
     "karma-jasmine": "^1.1.2",
-    "protractor": "^5.4.1"
+    "protractor": "^5.4.2",
+    "pug-cli": "^1.0.0-alpha6"
   },
   "scripts": {
+    "pug-it": "pug app",
     "postinstall": "npm run copy-libs",
     "update-deps": "npm update",
     "postupdate-deps": "npm run copy-libs",
     "copy-libs": "cpx \"node_modules/{angular,angular-*,bootstrap/dist,jquery/dist}/**/*\" app/lib -C",
-    "prestart": "npm install",
+    "prestart": "npm run pug-it",
     "start": "http-server ./app -a localhost -p 8000 -c-1",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
